iptables
# Generated by iptables-save v1.4.21 on Tue Apr 17 19:36:38 2018
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [40:5394]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -i eth0 -p udp -m udp --dport 1194 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -s 10.15.0.0/24 -j ACCEPT
-A FORWARD -d 10.15.0.0/24 -j ACCEPT
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
# Completed on Tue Apr 17 19:36:38 2018
# Generated by iptables-save v1.4.21 on Tue Apr 17 19:36:38 2018
*nat
:PREROUTING ACCEPT [4537:479403]
:INPUT ACCEPT [3:190]
:OUTPUT ACCEPT [4:344]
:POSTROUTING ACCEPT [4:344]
-A POSTROUTING -s 10.15.0.0/24 -o eth0 -j MASQUERADE
COMMIT
# Completed on Tue Apr 17 19:36:38 2018
